<resources>
    <string name="app_name">OrderEasy</string>
    <string name="title_activity_menu2">MenuActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">OrderEasy</string>
    <string name="nav_header_subtitle">bienvenid@</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="shopping_cart">Carrito de compras</string>
    <string name="btnUpdate">Actualizar</string>

    <!--  Menu vertical -->
    <string name="menu_profile">Perfil</string>
    <string name="profile_edit">Editar Perfil</string>
    <string name="menu_food_menu">Menú</string>
    <string name="menu_my_shopping">Mis Compras</string>

    <!--  Login  -->
    <string name="txtLogin">Ingresar a su cuenta</string>
    <string name="txtWelcome">Bienvenid@ a</string>
    <string name="txtInstruction">Ingrese su nombre de usuario</string>
    <string name="btnLogin">Ingresar</string>
    <string name="txtRegister">¿Aún no tiene una cuenta? Registrarse</string>
    <string name="txtTermsAndPolicy">Al ingresar usted acepta los Terminos y condiciones de servicio y Politicas de Privacidad</string>

    <!--  Profile  -->
    <string name="image_edit">Cambiar Imagen de Perfil</string>
    <string name="textMyDataTitle">Mis Datos</string>

    <string name="textPersonNameTitle">Nombre</string>
    <string name="textPersonLastNameTitle">Apellido</string>
    <string name="textUserNameTitle">Usuario</string>
    <string name="textPhoneTitle">Teléfono</string>
    <string name="textEmailTitle">Correo</string>
    <string name="textAgeTitle">Edad</string>

    <string name="textPersonName">Julieth Natalia</string>
    <string name="textPersonLastName">Castro Pulido</string>
    <string name="textUserName">n4t4l14_c4str0</string>
    <string name="textPhone">3192152801</string>
    <string name="textEmail">julieth.cp94@gmail.com</string>
    <string name="textAge">37</string>
    <string name="btnEditUser">Editar</string>

    <!--  Food Menu  -->
    <string name="txtColombianFoodTitle">Comida Colombiana</string>
    <string name="txtInternationalFoodTitle">Comida Internacional</string>
    <string name="txtDessertTitle">Postres</string>

    <!--  Title Food Menu  -->
    <string name="txtTitleAjiaco">Ajiaco Santafereño</string>

    <!--  Description Food Menu  -->
    <string name="txtDescriptionAjiaco">Sopa tradicional bogotana, acompañada de aguacate y arroz blanco</string>

    <!--  Price Food Menu  -->
    <string name="txtPriceAjiaco">$18.000</string>

    <!-- Shopping Cart items-->
    <string name="txtProductTitle">Producto</string>
    <string name="txtReferenceTitle">Descripción</string>
    <string name="txtValueTitle">Valor</string>
    <string name="txtProduct">Ajiaco</string>
    <string name="txtReference">con aguacate</string>
    <string name="txtValue">$18.000</string>

    <!--  card My Shopping  -->
    <string name="txtOrderTitle">Orden:</string>
    <string name="txtOrderBuy">#1234</string>
    <string name="txtDateBuy">24/04/2024</string>
    <string name="txtStateBuy">Entregado</string>
    <string name="txtDateStateBuy">LLegó el día 24/04/2024</string>
    <string name="txtDescriptionBuy">Recibido por Pepita Perez</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_signup">signup</string>
</resources>