<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_gallery">

<!--  Navegación de fragmento Menú de comidas   -->
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.ordereasy.ui.foodMenu.FoodMenuFragment"
        android:label="@string/menu_food_menu"
        tools:layout="@layout/fragment_food_menu" />

<!--  Navegación de fragmento Perfil  -->
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.ordereasy.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

<!--  navegación de fragmento Editar Perfil  -->
    <fragment
        android:id="@+id/nav_profile_edit"
        android:name="com.example.ordereasy.ui.profile.profileEditFragment"
        android:label="@string/profile_edit"
        tools:layout="@layout/fragment_profile_edit" />

<!--  Navegación de fragmento carrito de compras  -->
    <fragment
        android:id="@+id/nav_shopping_cart"
        android:name="com.example.ordereasy.ui.ShoppingCartFragment"
        android:label="@string/shopping_cart"
        tools:layout="@layout/fragment_shopping_cart" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.ordereasy.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <!--  Acción para navegar desde el fragmento de perfil hasta el fragmento de edición de perfil -->
    <action
        android:id="@+id/action_profileFragment_to_profileEditFragment"
        app:destination="@+id/nav_profile_edit"/>

</navigation>